fix(style): improve vertical align for input and tag

--- a/packages/veui-theme-dls/components/input.less
+++ b/packages/veui-theme-dls/components/input.less
@@ -10,6 +10,7 @@
   font-size: @dls-input-font-size-m;
   width: @dls-input-width;
   border-radius: @dls-input-border-radius-m;
+  line-height: 2;
 
   &-autofill {
     background-color: @veui-autofill-color;
