--- a/packages/veui-theme-dls/components/tag.less
+++ b/packages/veui-theme-dls/components/tag.less
@@ -9,7 +9,7 @@
   .padding(0, @dls-tag-padding);
   white-space: nowrap;
   outline: none;
-  line-height: 1;
+  line-height: 2;
   .veui-transition(color, border-color, background-color, box-shadow, opacity);
 
   .make-metrics(@size) {
